test/scc/type/semantic-errors/009.t
int a;

struct _Aligned(a) A
{
	int a;
};